Fixed body overflow

--- a/styles.scss
+++ b/styles.scss
@@ -32,7 +32,6 @@ html {
 
 body {
     margin: 0;
-    height: 200vh;
     background-color: black;
     color: rgba(255, 255, 255, 0.8);
 }
